fixing some styles

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <h2>EXPERIENCE</h2>
 
+<div class="sections">
 <h3> STAND-UP COMEDIAN 2008 - Present</h3>
 
 	<ul>
@@ -45,21 +46,26 @@
         <li>Performed twice in the World Series of Comedy in Las Vegas.</li>
         <li>Led a weekly workshop for approximately eight months in 2012, at the Joke Joint Comedy Club, for aspiring comedians of all ages.</li>
 	</ul>
+</div>
 
+<div class="sections">
 <h3>INSIDE ACCOUNT MANAGER, THOMSON REUTERS 2005 - 2008</h3>
 
 	<ul>
    		<li>Trained lawyers to do effective legal research using Westlaw software.</li>
    		<li>Responsible for managing accounts in territories in Midwest and West.</li>
    		<li>Worked with sales staff to demonstrate Westlaw products to existing and prospective customers.</li>
-   </ul>
+  </ul>
+</div>
 
+<div class="sections">
 <h3>LAWYER 2002—2005</h3>
 
     <ul>
     	<li>Worked for law firm Peterson & Ross, LLC, as a Summer Associate, then as an Associate, until the firm’s dissolution in 2003.</li>
    		<li>Worked as a solo practitioner representing civil and criminal clients until 2005.</li>
    	</ul>
+</div>
 
 <h2>EDUCATION</h2>
 
